# portr-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  MIGRATION.md  README.md  build.rs  build.sh  regions
.github/workflows/: build-release.yml
frontend/: package-lock.json  package.json
frontend/app/: globals.css
frontend/components/auth/: login-dialog.tsx
frontend/components/board/: board-dock.tsx
frontend/components/dashboard/: dashboard-page.tsx  data-tables.tsx  live-map.tsx
frontend/components/layout/: app-shell.tsx
frontend/components/settings/: settings-page.tsx  version-panel.tsx
frontend/lib/: api.ts  i18n.ts  types.ts
src/: api.rs  cf.rs  config.rs  main.rs  models.rs  proxy.rs  recent_traffic.rs  ssh.rs  store.rs
src/admin/: upgrade.rs  version.rs
src/ui/: dashboard.html
